# movielog

./: .envrc  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  .vale.ini  Brewfile  Brewfile.lock.json  CLAUDE.md  README.md  mypy.ini  npm_use.sh  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  setup.sh  test.json
.github/: dependabot.yml
cast-and-crew/: abel-ferrara.json  akira-kurosawa.json  alfred-hitchcock.json  anthony-shaffer.json  bela-lugosi.json  ben-hecht.json  ben-johnson.json  bette-davis.json  billy-wilder.json  boris-karloff.json  brian-de-palma.json  burt-lancaster.json  burt-reynolds.json  cary-grant.json  christopher-lee.json  clint-eastwood.json  clive-barker.json  dario-argento.json  david-cronenberg.json  david-lean.json  david-mamet.json  dean-martin.json  don-siegel.json  errol-flynn.json  frank-sinatra.json  fritz-lang.json  gene-hackman.json  george-a-romero.json  howard-hawks.json  humphrey-bogart.json  ingmar-bergman.json  jack-lemmon.json  jack-nicholson.json  james-coburn.json  james-garner.json  james-stewart.json  jimmy-sangster.json  john-boorman.json  john-carpenter.json  john-ford.json  (+57 more)
collections/: childs-play.json  cinema-speculation.json  friday-the-13th.json  halloween.json  hammer-films.json  hatchet.json  horror-movie-a-day.json  james-bond.json  phantasm.json  saw.json  shaw-brothers.json  universal-monsters.json
data/: 100-bloody-acres-2012.json  100-bloody-acres-2012.yml  100-rifles-1969.json  1000-eyes-of-dr-mabuse-1960.json  12-1-1969.yml  12-angry-men-1957.json  13-ghosts-1960.json  13-sins-2014.json  13-sins-2014.yml  13-west-street-1962.json  13-west-street-1962.yml  14-amazons-1972.json  1408-2007.json  1408-2007.yml  1492-conquest-of-paradise-1992.json  1492-conquest-of-paradise-1992.yml  15-minutes-2001.yml  1900-1976.yml  1917-2019.yml  1922-2017.json  1941-1979.json  1941-1979.yml  20-000-years-in-sing-sing-1932.json  20000-years-in-sing-sing-1932.json  20000-years-in-sing-sing-1932.yml  2001-a-space-odyssey-1968.json  21-jump-street-2012.json  21-jump-street-2012.yml  22-jump-street-2014.json  22-jump-street-2014.yml  24-hour-party-people-2002.json  3-from-hell-2019.json  3-godfathers-1948.json  3-ring-circus-1954.json  3-ring-circus-1954.yml  3-women-1977.yml  36-hours-1964.json  36th-chamber-of-shaolin-1978.json  39-steps-1935.json  4-44-last-day-on-earth-2011.json  (+7010 more)
data-back/: 100-rifles-1969.yml  12-angry-men-1957.yml  1492-conquest-of-paradise-1992.yml  1917-2019.yml  1922-2017.yml  2001-a-space-odyssey-1968.yml  3-godfathers-1948.yml  36-hours-1964.yml  4-for-texas-1963.yml  5-card-stud-1968.yml  7-women-1966.yml  71-fragments-of-a-chronology-of-chance-1994.yml  92-in-the-shade-1975.yml  a-cat-in-the-brain-1990.yml  a-clockwork-orange-1971.yml  a-dangerous-method-2011.yml  a-dark-song-2016.yml  a-devil-with-women-1930.yml  a-dirty-knight-s-work-1976.yml  a-field-in-england-2013.yml  a-fistful-of-dollars-1964.yml  a-girl-walks-home-alone-at-night-2014.yml  a-good-man-in-africa-1994.yml  a-good-marriage-2014.yml  a-high-wind-in-jamaica-1965.yml  a-i-artificial-intelligence-2001.yml  a-lesson-in-love-1954.yml  a-life-in-the-balance-1955.yml  a-lizard-in-a-woman-s-skin-1971.yml  a-magic-christmas-2014.yml  a-man-called-sledge-1970.yml  a-most-wanted-man-2014.yml  a-nightmare-on-elm-street-1984.yml  a-nightmare-on-elm-street-3-dream-warriors-1987.yml  a-passage-to-india-1984.yml  a-perfect-couple-1979.yml  a-rainy-day-in-new-york-2019.yml  a-reason-to-live-a-reason-to-die-1972.yml  a-royal-scandal-1945.yml  a-safe-place-1971.yml  (+1682 more)
exports/: watchlist-titles.json
movie_countries/: 100-bloody-acres-2012.yml  13-sins-2014.yml  21-jump-street-2012.yml  22-jump-street-2014.yml  a-bay-of-blood-1971.yml  a-dark-song-2016.yml  (+712 more)
(+35145 files in other folders)
